Several changes, refactoring
